scrollbar fixed

--- a/src/components/ComponentsStyles/BlogCard.module.scss
+++ b/src/components/ComponentsStyles/BlogCard.module.scss
@@ -3,7 +3,7 @@
 .row {
   width: 100%;
   // min-height: 82vh;
-  border: 1px solid red;
+  // border: 1px solid red;
   padding: 2rem;
   display: flex;
   justify-content: center;
@@ -16,7 +16,7 @@
     text-decoration: none;
   }
   .card {
-    border: 1px solid red;
+    // border: 1px solid red;
 
     float: left;
     // padding: 0 1rem;
